MODON MRE BPDEV/force-app/main/default/objects/Unit_Consolidation__c/Unit_Consolidation__c.object-meta.xml
<CustomObject>
    <description>This object is using for Unit consolidation SR.</description>
    <label>Unit Consolidation</label>
    <nameField>
        <displayFormat>UN-{00000000}</displayFormat>
        <label>Unit Consolidation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Unit Consolidations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>