MODON MRE BPDEV/force-app/main/default/objects/Unit_Consolidation__c/fields/Fund_Transfer__c.field-meta.xml
<CustomField>
    <fullName>Fund_Transfer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fund Transfer</label>
    <type>Checkbox</type>
</CustomField>