MODON MRE BPDEV/force-app/main/default/objects/Unit_Consolidation__c/fields/IsConsolidated__c.field-meta.xml
<CustomField>
    <fullName>IsConsolidated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cancel Unit</label>
    <type>Checkbox</type>
</CustomField>