MODON MRE BPDEV/force-app/main/default/objects/Unit_Consolidation__c/fields/Market_Loss__c.field-meta.xml
<CustomField>
    <fullName>Market_Loss__c</fullName>
    <formula>If(IsConsolidated__c,Secondary_Market_Value__c-Sales_Order__r.TotalAmount__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Market Loss</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>