MODON MRE BPDEV/force-app/main/default/objects/Unit_Consolidation__c/fields/Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Order</label>
    <referenceTo>SalesOrder__c</referenceTo>
    <relationshipLabel>Unit Consolidations</relationshipLabel>
    <relationshipName>Unit_Consolidations</relationshipName>
    <type>Lookup</type>
</CustomField>