MODON MRE BPDEV/force-app/main/default/objects/Unit_Consolidation__c/validationRules/Cancel_unit_cannot_uncheck.validationRule-meta.xml
<ValidationRule>
    <fullName>Cancel_unit_cannot_uncheck</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISNEW()), 
    PRIORVALUE( IsConsolidated__c ) = TRUE,
    IsConsolidated__c = FALSE
)</errorConditionFormula>
    <errorMessage>Cancel Unit cannot be unchecked once selected.</errorMessage>
</ValidationRule>