MODON MRE BPDEV/force-app/main/default/objects/Unit_Consolidation__c/validationRules/Cancel_Unit_True.validationRule-meta.xml
<ValidationRule>
    <fullName>Cancel_Unit_True</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
     IsConsolidated__c  = TRUE,
    OR(
        Fund_Transfer__c = TRUE,
        NOT(ISBLANK(Transfer_Amount__c))
    )
)</errorConditionFormula>
    <errorMessage>You cannot enter Transfer Amount or select Fund Transfer when Cancel Unit is checked.</errorMessage>
</ValidationRule>