MODON MRE BPDEV/force-app/main/default/objects/Unit_Consolidation__c/validationRules/Fund_Transer_Checkbox_true.validationRule-meta.xml
<ValidationRule>
    <fullName>Fund_Transer_Checkbox_true</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    Fund_Transfer__c = TRUE,
     IsConsolidated__c = TRUE
)</errorConditionFormula>
    <errorMessage>You cannot select both Cancel Unit and Fund Transfer at the same time.</errorMessage>
</ValidationRule>