MODON MRE BPDEV/force-app/main/default/objects/Unit_Consolidation__c/validationRules/Secondary_market_required_if_deleted.validationRule-meta.xml
<ValidationRule>
    <fullName>Secondary_market_required_if_deleted</fullName>
    <active>true</active>
    <errorConditionFormula>AND( IsConsolidated__c ,  OR(Secondary_Market_Value__c =0, Secondary_Market_Value__c =null))</errorConditionFormula>
    <errorDisplayField>Secondary_Market_Value__c</errorDisplayField>
    <errorMessage>Secondary Market Value is Mandatory for Cancelled Unit</errorMessage>
</ValidationRule>