MODON MRE BPDEV/force-app/main/default/objects/Unit_Consolidation__c/validationRules/UC_Select_Cancel_or_Fundtransfer.validationRule-meta.xml
<ValidationRule>
    <fullName>UC_Select_Cancel_or_Fundtransfer</fullName>
    <active>true</active>
    <errorConditionFormula>AND(IsConsolidated__c , Fund_Transfer__c)</errorConditionFormula>
    <errorMessage>Cannot make retained unit cancelled. Please check if you want to keep the unit or cancel it.</errorMessage>
</ValidationRule>